--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,7 @@
 name: Publish Github Pages
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   gh-pages:
@@ -11,16 +11,16 @@ jobs:
     - name: Setup python
       uses: actions/setup-python@v2
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Build and Commit
-      uses: sphinx-notes/pages@master
+      uses: sphinx-notes/pages@main
       with:
         documentation_path: ./docs
         requirements_path: ./requirements/dev-requirements.txt
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@main
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
