--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Build and Commit
-      uses: sphinx-notes/pages@main
+      uses: sphinx-notes/pages@master
       with:
         documentation_path: ./docs
         requirements_path: ./requirements/dev-requirements.txt
