--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,15 +10,22 @@ jobs:
     steps:
     - name: Setup python
       uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
     - name: Checkout
       uses: actions/checkout@main
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+    - name: Install packages
+      run: |
+        python -m pip install --upgrade pip wheel setuptools
+        python -m pip install -r requirements/requirements.txt -r requirements/dev-requirements.txt
+        python -m pip install -e .
+        python -m pip list
     - name: Build and Commit
       uses: sphinx-notes/pages@master
       with:
         documentation_path: ./docs
-        requirements_path: ./requirements/dev-requirements.txt
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
