--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,5 @@ include LICENSE.txt
 include requirements/requirements.txt
 include src/pathpy/py.typed
 recursive-exclude tests *
+include versioneer.py
+include src/pathpy/_version.py
