add remove space but exclude docs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,3 +44,10 @@ repos:
     -   id: isort
         files: "\\.(py)$"
         args: [--settings-path=pyproject.toml]
+
+# Changes tabs to spaces
+- repo: https://github.com/Lucas-C/pre-commit-hooks
+  rev: v1.1.10
+  hooks:
+  - id: remove-tabs
+    exclude: ^(docs)
